Mask passwords in Rental and User services to enhance security. Fixed tests.